samples/_failures_safe/1761489462_4e4c13_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4f229ae8.c: In function ‘main’:
./samples/SAFE/__tmp_4f229ae8.c:154:9: error: expected declaration or statement at end of input
  154 |         printf("  Compressed size: %zu bytes\n", result.compressed_size);
      |         ^~~~~~
./samples/SAFE/__tmp_4f229ae8.c:154:9: error: expected declaration or statement at end of input
